updated pregnancy confirmation as late-releasing

--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -390,7 +390,8 @@ release_blocks <- c(
   "NEW GYN 7-DAY",
   "NEW GYN 14-DAY",
   "NEW GYN 21-DAY",
-  "NEW GYN 28-DAY"
+  "NEW GYN 28-DAY",
+  "Pregnancy Confirmation"
 )
 ```
 
